--- a/style.css
+++ b/style.css
@@ -340,6 +340,7 @@ ul {
 			}
 
 			.l-section-title {margin-top: 4rem;}
+			.l-dot-xs {margin-top: 2rem;}
 			.icons {
 				padding-left: 2rem;
 				padding-right: 2rem;
