--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -142,9 +142,10 @@ tr {
   font-family: "Segoe Print";
   margin: 1rem 3rem;
 }
-@media screen and (max-device-width: 991px) {
+@media screen and (min-device-width: 768px) and (max-device-width: 991px) {
   .font__table--enchantee {
-    margin: 0;
+    border: 1px black solid;
+    text-align: center;
   }
 }
 .font__table--title {
